fix z-index main page, menu, add navigate to buttons main page

--- a/src/components/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/BurgerMenu/BurgerMenu.module.scss
@@ -10,7 +10,7 @@
   //transform: translateX(-100vw);
   left: -100%;
   transition: all .85s;
-  z-index: 7;
+  z-index: 3;
 }
 
 .burger.active{
