--- a/src/components/CardCategory/CardCategory.module.scss
+++ b/src/components/CardCategory/CardCategory.module.scss
@@ -27,7 +27,7 @@
   left:0;
   height: 100%;
   width: 100%;
-  z-index: 5;
+  z-index: 1;
 }
 
 .content-title{
@@ -47,5 +47,5 @@ text-shadow: 1px 1px 48px rgba(0, 0, 0, 1);
   position: absolute;
   bottom:10%;
  // margin: 0 auto;
-  z-index: 3;
+  z-index: 1;
 }
