--- a/src/components/CardProduct/CardProduct.module.scss
+++ b/src/components/CardProduct/CardProduct.module.scss
@@ -29,7 +29,7 @@
       top: 0;
       left: 0;
       width: 100%;
-      z-index: 10;
+      z-index: 1;
       box-shadow: 0 6px 15px 1px rgb(0 10 12 / 78%);
       
       transition: all 2s;
