--- a/src/components/ShadedBackground/ShadedBackground.module.scss
+++ b/src/components/ShadedBackground/ShadedBackground.module.scss
@@ -8,7 +8,7 @@
   pointer-events: none;  
   opacity: 0;
   transition: all .8s;
-  z-index: 6;
+  z-index: 2;
 }
 
 .shaded-background.active{
