--- a/src/pages/layout/components/Header/Header.module.scss
+++ b/src/pages/layout/components/Header/Header.module.scss
@@ -67,7 +67,7 @@
   gap: 5px;
   justify-content: space-between;
   background-color: $color-background-white;
-  z-index: 3;
+  z-index: 2;
   border-radius: 5px;
   
 
